correct collapses + about banner

--- a/my-app/src/components/DescriptionPanel.scss
+++ b/my-app/src/components/DescriptionPanel.scss
@@ -21,20 +21,22 @@
       cursor: pointer;
     }
   }
-  .description__content {
-    background-color: $background-light;
-    color: $color-primary;
-    padding: 1rem;
-    border-radius: 0.7rem;
-    position: relative;
-    top: -0.3rem;
-    z-index: -1;
-    transition: transform 0.3s ease-in-out;
-    &.hidden {
-      transform: translateY(-100%);
-    }
-    &.visible {
-      transform: translateY(0);
-    }
+}
+
+.description__content {
+  background-color: $background-light;
+  color: $color-primary;
+  padding: 1rem;
+  border-radius: 0.7rem;
+  position: relative;
+  top: -0.5rem;
+  z-index: -1;
+  transition: transform 0.3s ease-in-out;
+  &.hidden {
+    transform: translateY(-100%);
+    display: none;
+  }
+  &.visible {
+    transform: translateY(0);
   }
 }
